# mintvue-app

./: LICENSE  Mock up  README.md  roadmap.md
backend/: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  railpack.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 79026945d0db_updated_the_content_able.py  ed349ebc2ff0_prod_databases_init.py
backend/app/models/: __init__.py  content.py  nft.py  transaction.py  user.py
backend/app/routers/: auth.py  content.py  nft.py  wallet.py
backend/app/service/: auth.py  bags.py  content.py  feed.py  nft.py  s3.py  wallet.py
backend/app/service/crossmint/: mintService.py  wallet.py
backend/app/utils/: media.py
backend/core/: config.py  email.py  logger.py  redis.py  security.py  session.py
backend/core/encryption/: base.py  fernet.py  kms.py  provider.py
backend/templates/emails/: welcome.html
backend/tools/: retry_thumbnail.py  test_thumbnail.py
frontend/mintvue/: middleware.ts  package-lock.json  package.json
frontend/mintvue/app/: globals.css  layout.tsx  page.tsx
frontend/mintvue/app/auth/: page.tsx
frontend/mintvue/app/user/: layout.tsx
frontend/mintvue/components/auth/: auth-card.tsx  auth-form.tsx
frontend/mintvue/components/dashboard/: dashboard-header.tsx  sidebar.tsx
frontend/mintvue/components/events/: create-event-modal.tsx  event-card.tsx
frontend/mintvue/components/feed/: video-actions.tsx  video-card.tsx  video-feed.tsx
frontend/mintvue/hooks/: use-auth.ts  use-events.ts  use-feeds.ts  use-notifications.ts
(+18 files in other folders)
